# SkillRouter

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: common.py  data_io.py  evaluate_predictions.py  export_retrieval.py  metrics.py  run_open_model_eval.py
tests/: test_common.py  test_data_io.py  test_metrics.py
